B.txt
  File "/Users/jacksonzhang/Desktop/Pokerbot-2022/PokerBotsPBJ/python_lecture_2/player.py", line 1
    <<<<<<< HEAD
    ^
SyntaxError: invalid syntax
